# openqcdcpp

./: CMakeLists.txt  Doxyfile  HPLreplace.text  Makefile  README.md  evaluate.py  sketches.py
Doxy/html/: ______constants_8h.html  ______constants_8h_source.html  annotated.html  classLogger-members.html  classLogger.html  classLogger__coll__graph.map  classLogger__coll__graph.md5  classLogger_abc41bfb031d896170c7675fa96a6b30c_icgraph.map  classLogger_abc41bfb031d896170c7675fa96a6b30c_icgraph.md5  classLogger_acebb37f5538780e6c14f13de6ec497bc_cgraph.map  classLogger_acebb37f5538780e6c14f13de6ec497bc_cgraph.md5  classPdf-members.html  classPdf.html  classPdf_a40a29328f79a7b6e776afa322205bd9f_icgraph.map  classPdf_a40a29328f79a7b6e776afa322205bd9f_icgraph.md5  classPdf_a7b67a151926162e87e7248c1db99b580_icgraph.map  classPdf_a7b67a151926162e87e7248c1db99b580_icgraph.md5  classPdf_a80fb579ab586ba61596bb084330d0ac6_icgraph.map  classPdf_a80fb579ab586ba61596bb084330d0ac6_icgraph.md5  classProtectedObject-members.html  classProtectedObject.html  classes.html  coefffunc_8h.html  coefffunc_8h__dep__incl.map  coefffunc_8h__dep__incl.md5  coefffunc_8h__incl.map  coefffunc_8h__incl.md5  coefffunc_8h_a084f37cd16e0c30e8001dbd66338350b_icgraph.map  coefffunc_8h_a084f37cd16e0c30e8001dbd66338350b_icgraph.md5  coefffunc_8h_a894395aa259170e5142ce132238309e6_icgraph.map  coefffunc_8h_a894395aa259170e5142ce132238309e6_icgraph.md5  coefffunc_8h_aca4f6958287a3352a0f516ed379ee749_icgraph.map  coefffunc_8h_aca4f6958287a3352a0f516ed379ee749_icgraph.md5  coefffunc_8h_ae4256e1ef32ca3e99ee5ce8a18f407b1_icgraph.map  coefffunc_8h_ae4256e1ef32ca3e99ee5ce8a18f407b1_icgraph.md5  coefffunc_8h_source.html  conceptComplex.html  conceptReal.html  concepts.html  constants_8h.html  (+195 more)
Doxy/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  concepts_0.js  concepts_1.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_1.js  files_2.js  files_3.js  (+43 more)
include/: ___constants.h  chaplin.h  coefffunc.h  constants.h  debugmsg.h  extrapolate.h  filereader.h  flags.h  fortransymbols.h  freezeout.h  hqcoeff.h  initdata.h  integrate.h  logger.h  pdf.h  protectedobject.h  savedata.h  structfunc.h  uninitfunc.h
libsrc/: coefffunc.cpp  constants.cpp  flags.cpp  hqcoeff.cpp  integrate.cpp  pdf.cpp  structfunc.cpp
mathematica notebooks/: Contractions.nb  F2_CoeffFunctions.nb  HQCoeffs.nb
src/: hoppettest.cpp  integrate.cpp  lhapdftest.cpp  logger.cpp  plusdist.cpp  specV2.cpp  structfunctest.cpp  testF2heavyintegrand.cpp  testF2integrand.cpp  teststructfunc.cpp
tests/F2heavy/: CMakeLists.txt  eval.py  test  test.cpp
tests/F2heavyintegrand/: CMakeLists.txt  eval.py  test  test.cpp
tests/F2integrand/: test  test.cpp
tests/F2perf/: CMakeLists.txt  Makefile  eval.py  heaptrack.test.43162.zst  heaptrack.test.43413.zst  heaptrack.test.43864.zst  heaptrack.test.44068.zst  massif.out.39640  test  test.cpp  valgrind_output.xml
tests/F2perf/test.1.er/: dyntext  log.xml  map.xml  overview
tests/F2perf/test.1.er/archives/: test_UHyILZt997d
tests/F2perf/test.2.er/: data.frameinfo  dyntext  iotrace  log.xml  map.xml  overview  profile
tests/F2perf/test.2.er/archives/: libgslcblas.so.0.0.0_dnWuQRcLhw9  test_akb87A6E2Xb
tests/F2perf/test.3.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
tests/F2perf/test.3.er/archives/: test_akb87A6E2Xb
tests/F2perf/test.4.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
tests/F2perf/test.5.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
tests/F2perf/test.5.er/archives/: libgfortran.so.5.0.0_dnWuQRcLhw9  test_akb87A6E2Xb
tests/F2perf/test.6.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
tests/F2perf/test.6.er/archives/: test_akb87A6E2Xb
tests/F2perf/test.7.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
tests/F2perf/test.7.er/archives/: test_akb87A6E2Xb
tests/F2perf/test.8.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
tests/F2perf/test.8.er/archives/: test_akb87A6E2Xb
tests/F2perf/test.9.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
tests/F2perf/test.9.er/archives/: libLHAPDF.so_0tunACWXRQb  libchaplin.so.0.0.0_0C2Ha5GzEX5  libgsl.so.27.0.0_dnWuQRcLhw9  test_akb87A6E2Xb
tests/HQcoefffunc/: CMakeLists.txt  eval.py  test  test.cpp
tests/coefffunc/: Makefile  test  test.cpp
tests/coefffunc/test.1.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
tests/hoppetcompare/: CMakeLists.txt  eval.py  test.cpp
tests/integration/: CMakeLists.txt  Makefile  eval.py  test  test.cpp
tests/sampling/: CMakeLists.txt  Makefile  eval.py  test  test.cpp  test_perf.cpp
tests/tablelookup/: CMakeLists.txt  eval.py  test  test.cpp
